Further work, added constraints.

--- a/Code/SecretSantaMakerCSP.ConsoleApplication/SecretSantaMakerCSP.ConsoleApplication.csproj
+++ b/Code/SecretSantaMakerCSP.ConsoleApplication/SecretSantaMakerCSP.ConsoleApplication.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="IterateSolutions.cs" />
+    <Compile Include="Main.cs" />
+    <Compile Include="GetSingleSolution.cs" />
+    <Compile Include="FormatDraw.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
