Added printing out of the proposed solution.

--- a/Code/SecretSantaMakerCSP.ConsoleApplication/SecretSantaMakerCSP.ConsoleApplication.csproj
+++ b/Code/SecretSantaMakerCSP.ConsoleApplication/SecretSantaMakerCSP.ConsoleApplication.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetProposedSolution.cs" />
     <Compile Include="IterateSolutions.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="GetSingleSolution.cs" />
