--- a/Code/SecretSantaMakerCSP.ConsoleApplication/SecretSantaMakerCSP.ConsoleApplication.csproj
+++ b/Code/SecretSantaMakerCSP.ConsoleApplication/SecretSantaMakerCSP.ConsoleApplication.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SecretSantaMakerCSP.ConsoleApplication</RootNamespace>
     <AssemblyName>SecretSantaMakerCSP.ConsoleApplication</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
